@@ -1,3 +1,7 @@
+Tue Apr  8 22:55:32 2014  Akinori MUSHA  <knu@iDaemons.org>
+
+	* lib/mkmf.rb (MakeMakefile#dir_config): Improve documentation.
+
 Tue Apr  8 22:31:44 2014  Koichi Sasada  <ko1@atdot.net>
 
 	* gc.c: rename `RGENGC_THREEGEN' to `RGENGC_AGE2_PROMOTION'.
